--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,6 @@ jobs:
     - name: Build and push Docker image
       run: |
         docker buildx build --platform linux/amd64,linux/arm64 -t "${{ secrets.DOCKERHUB_USERNAME }}"/django:latest .
-        docker push "${{ secrets.DOCKERHUB_USERNAME }}"/django:latest
+        docker push "${{ secrets.DOCKERHUB_USERNAME }}"/django:latest .
 
       
