--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,10 @@ jobs:
       env:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push Docker image
+      run: |
+        docker build -t sawangautam172/djangolatest .
+        docker push sawangautam172/django:latest
 
     # - name: Build and push Docker image
     #   run: |
