--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,8 @@ jobs:
         DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push Docker image
       run: |
-        docker build -t sawangautam172/django:latest .
-        docker push sawangautam172/django:latest
+        docker build -t sawangautam172/django:latest /app/Dockerfile .
+        docker push sawangautam172/django:latest /app/Dockerfile
 
     # - name: Build and push Docker image
     #   run: |
