--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
-       context: DockerFileFolder/
+       context: django-on-docker/
        push: true
        tags: sawangautam172/githubactionpushed:latest
 
